Upload Image Banner

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DB_USERNAME="root"
 DB_PASSWORD="password"
 DB_PORT=5432
 DB_DATABASE="marketing"
+
+STORAGE_SERVICE_URL="https://api-development.pinjammodal.id/storage/objects"
