--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ DB_PASSWORD="password"
 DB_PORT=5432
 DB_DATABASE="marketing"
 
-STORAGE_SERVICE_URL="https://api-development.pinjammodal.id/storage/objects"
+STORAGE_SERVICE_URL=""
+AMQP_SERVER_URL="amqp://guest:guest@localhost:5672"
